--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,15 @@ mixin {
     config "cataclysmtweaks.mixin.json"
 }
 
+repositories {
+    maven {
+        url "https://cursemaven.com"
+        content {
+            includeGroup "curse.maven"
+        }
+    }
+}
+
 // Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
@@ -153,8 +162,9 @@ dependencies {
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft 'net.minecraftforge:forge:1.19.2-43.2.0'
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
-    implementation fg.deobf("com.github.L_Ender.cataclysm:cataclysm-1.85:1.19.2")
-    implementation fg.deobf("com.github.alexthe666.citadel:citadel-2.1.4:1.19")
+    implementation fg.deobf("curse.maven:l_ender-s-cataclysm-551586:5039717")
+    implementation fg.deobf("curse.maven:citadel-331936:4556677")
+    implementation fg.deobf("curse.maven:curios-309927:5049407")
 
     // Real mod deobf dependency examples - these get remapped to your current mappings
     // compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api") // Adds JEI API as a compile dependency
