--- a/build.gradle
+++ b/build.gradle
@@ -160,9 +160,9 @@ dependencies {
     // Specify the version of Minecraft to use. If this is any group other than 'net.minecraft', it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency, and its patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.19.2-43.2.0'
+    minecraft 'net.minecraftforge:forge:1.19.2-43.3.8'
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
-    implementation fg.deobf("curse.maven:lendercataclysm-551586:5316908")
+    implementation fg.deobf("curse.maven:lendercataclysm-551586:5474800")
     implementation fg.deobf("curse.maven:lionfish-api-1001614:5314835")
     implementation fg.deobf("curse.maven:curios-309927:5302436")
     implementation fg.deobf("curse.maven:archaeology-api-950822:5141973")
@@ -184,12 +184,12 @@ dependencies {
 jar {
     manifest {
         attributes([
-                "Specification-Title"     : "examplemod",
-                "Specification-Vendor"    : "examplemodsareus",
+                "Specification-Title"     : "cataclysmtweaks",
+                "Specification-Vendor"    : "min01",
                 "Specification-Version"   : "1", // We are version 1 of ourselves
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : project.jar.archiveVersion,
-                "Implementation-Vendor"   : "examplemodsareus",
+                "Implementation-Vendor"   : "min01",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
